--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ flask-marshmallow==0.10.1
 Flask-OpenID==1.2.5
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
+gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 jsonschema==3.0.2
